# softcheck-tip

./: dune-project  softcheck_tip.opam
.github/workflows/: main.yml
src/lib/: dune
src/lib/analysis/: available_expressions.ml  constant_propagation.ml  dune  live_variables.ml  reaching_definitions.ml  sign.ml  taint.ml  very_busy_expressions.ml
src/lib/ast/: ast.ml  binop.ml  binop.mli  dune  expr.ml  expr.mli  loc.ml  stmt.ml  stmt.mli  unop.ml  unop.mli
src/lib/parser/: dune  l.mll  p.mly  utils.ml
src/lib/scil/: cfg.ml  cfg_node.ml  dune  flow.ml  p.ml  scil_impl.ml  specifics.ml
